--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
+    "react-id-swiper": "^4.0.0",
+    "react-parallax": "^3.5.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-swipeable-views": "^0.14.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.3.5",
