--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
+    "serve": "^14.2.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
