Deply full stack app to heroku

--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "node server/src/index.js",
     "build": "react-scripts build",
-    "dev": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "heroku-postbuild": "npm run build",
+    "dev": "concurrently \"cd server && npm run dev\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
