--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5001
-MONGO_URI=mongodb+srv://cidtsubs:7576Kobe!!@subscriptions.modcy.mongodb.net/CIDT?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://cidtsubs:7576Kobe!!@subscriptions.modcy.mongodb.net/CIDT?retryWrites=true&w=majority
