database heroku config

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5001
-MONGODB_URI=mongodb+srv://cidtsubs:7576Kobe%21%21@subscriptions.modcy.mongodb.net/?retryWrites=true&w=majority&appName=Subscriptions
+MONGODB_URI=mongodb+srv://cidtsubs:7576Kobe%21%21@subscriptions.modcy.mongodb.net/CIDT?retryWrites=true&w=majority&appName=Subscriptions
