--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^8.17.10",
+    "@tabler/icons-react": "^3.24.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.13.5",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,8 +22,11 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "serve": "^14.2.3",
+    "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.3.5",
+    "three": "^0.171.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
