--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-id-swiper": "^4.0.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
